added last paragraph design

--- a/line_bisect_evolution.html
+++ b/line_bisect_evolution.html
@@ -16,15 +16,24 @@ body {
 h1, h2, h3 {
   color: #050;
 }
+p {
+  margin-top: 1em;
+  margin-bottm: 1em;
+}
 h1 {
   border-top: 3px solid #050;
   border-left: 3px solid #050;
   padding-left: 10pt;
   padding-top: 0ex;
 }
-div.h1, h3 {
+div.h1, h3, div.bot {
   border-left: 3px solid #050;
   padding-left: 10pt;
+}
+div.bot {
+  margin-top: 1em;
+  border-bottom: 3px solid #050;
+  padding-bottom: 3pt;
 }
 pre, code, tt {
   font-size: 75%;
@@ -1126,6 +1135,6 @@ your comment</a> about this article on my blog. Constructive criticism is
 also welcome. Constructively going into raptures over it is even more
 welcome.
 
-<p>Have fun binary searching, but don't forget to sort your files first!
+<div class=bot>Have fun binary searching, but don't forget to sort your files first!
 
 </body></html>
